# Turtlebot_Warehouse

./: .gitmodules  README.md
Sensor_Old_Project/turtleboi/: CMakeLists.txt  README.md  package.xml
Sensor_Old_Project/turtleboi/data/: Goals.TXT  House.TXT
Sensor_Old_Project/turtleboi/src/: main.cpp  method.cpp  method.h  movenment.cpp  movenment.h  sensorprocessing.cpp  sensorprocessing.h
Task_Allocation_Brendan/: package.xml
Task_Allocation_Brendan/src/: method.cpp  method.h
Trajectory_Liam/: CMakeLists.txt
Trajectory_Liam/src/: method.cpp  method.h
cameras/: CMakeLists.txt  package.xml  run_cameras.launch
control_Dan/: CMakeLists.txt  package.xml
control_Dan/src/: control.cpp  control.h  main.cpp  method.cpp  method.h  sensorprocessing.cpp  sensorprocessing.h
control_Dan/test/: control copy.cpp  control.cpp  image_data_struct.h  method.cpp  obstaclerecog.h  sensorprocessing.cpp  sensorprocessing.h
coord_converter/: CMakeLists.txt
coord_converter/launch/: coord_converter.launch
coord_converter/src/: main.cpp
final_verison_attempt2/: CMakeLists.txt
final_verison_attempt2/launch/: multi_turtlebot_Laucnh.launch
final_verison_attempt2/src/: control.cpp  main.cpp  method.cpp  method.h  path_avoidance.cpp  path_avoidance.h  prm.cpp  prm.h  taskAlloction.cpp  taskAlloction.h  turtlebot.cpp  turtlebot.h
final_version/: CMakeLists.txt  package.xml
final_version/src/: control.cpp  control.h  main.cpp  method.cpp  method.h  path_avoidance.cpp  prm.cpp  taskAlloction.cpp  turtlebot.cpp  turtlebot.h
intergration_test/: CMakeLists.txt
intergration_test/src/: control.cpp  main.cpp  method.cpp  method.h  prm.cpp  taskAlloction.cpp  taskAlloction.h
map_server/: CMakeLists.txt  package.xml
map_server/launch/: map_server.launch
map_server/maps/: map.pgm  map.yaml  map5.yaml  whole_map.yaml
map_server/src/: main.cpp
mapping_john/: CMakeLists.txt  package.xml
mapping_john/launch/: mapping_john.launch
mapping_john/map/: .pgm  .yaml  corner.pgm  corner.yaml  corner_map.pgm  corner_map.yaml  map.yaml  map_old.yaml  whole_map.yaml
mapping_john/src/: BoundaryDetection.h  boundarydetection.cpp  boundarydetection.h  calibration.cpp  calibration.h  errorcalc.cpp  errorcalc.h  imageconverter.cpp  imageconverter.h  imagetest.cpp  main.cpp  markers.cpp  markers.h  method.cpp  obstaclerecog.cpp  obstaclerecog.h  tagrecog.cpp  tagrecog.h
mapping_john/test/: 2024-03-14-16-27-59.bag  2024-03-14-16-28-09.bag  2024-03-14-17-05-13.bag  2024-03-14-17-05-54.bag  2024-04-04-15-08-47.bag  2024-04-04-15-09-29.bag  2024-04-04-15-09-58.bag  2024-04-04-15-10-33.bag  2024-04-04-15-10-48.bag  2024-04-04-15-11-07.bag  2024-04-04-15-11-17.bag  left0016.ini  test_blue_static1.bag  test_blue_static2.bag  test_red_static2.bag
mapping_john/test/test_map/: map.pgm  map.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map5.pgm  nowalls.pgm  nowalls.yaml  test_map1.pgm  test_map1.yaml  test_map2.pgm  test_map2.yaml
marker_msgs/: CMakeLists.txt  package.xml
marker_msgs/msg/: marker.msg
multi_nav/: CMakeLists.txt
multi_nav/config/: amcl_params_multi.yaml  move_base_params_multi.yaml
multi_nav/launch/: multi_nav.launch  multi_nav2.launch  multi_nav3.launch  multi_nav_old.launch
multi_nav/launch/includes/: move_base.launch  move_base2.launch  move_base3.launch
multi_nav/maps/: map.yaml
multi_nav/param/: costmap_common_params_tb3_0.yaml  costmap_common_params_tb3_1.yaml  global_costmap_params_tb3_0.yaml  global_costmap_params_tb3_1.yaml  local_costmap_params_tb3_0.yaml  local_costmap_params_tb3_1.yaml
multi_nav/rviz/: navigation_multi.rviz  navigation_tb3_0.rviz  navigation_tb3_1.rviz  turtlebot3_navigation.rviz  turtlebot3_navigation2.rviz  turtlebot3_navigation3  turtlebot3_navigation3.rviz  turtlebot3_navigation_multi.rviz  turtlebot3_navigation_tb3_0.rviz  turtlebot3_navigation_tb3_1.rviz  turtlebot3_tb3_0.rviz  turtlebot3_tb3_1.rviz
multi_nav/src/: global_path2.cpp  global_path3.cpp  global_position2.cpp  global_position3.cpp
multiple_turtlebot_integration/: CMakeLists.txt
multiple_turtlebot_integration/src/: control.cpp  control.h  main.cpp  method.cpp  method.h  path_avoidance.cpp  path_avoidance.h  prm.cpp  prm.h  taskAlloction.cpp  taskAlloction.h  turtlebot.cpp  turtlebot.h
single_turtlebot_integration/: CMakeLists.txt
single_turtlebot_integration/src/: control.cpp  control.h  main.cpp  method.cpp  method.h  prm.cpp  prm.h  taskAlloction.cpp  taskAlloction.h  turtlebot.cpp  turtlebot.h
stop_all/: CMakeLists.txt
stop_all/src/: main.cpp  method.cpp  method.h
test_turtlebotMovement/: CMakeLists.txt  package.xml
test_turtlebotMovement/src/: main.cpp  method.cpp  method.h
trajectory_liam/: CMakeLists.txt  package.xml
trajectory_liam/src/: A_star.cpp.txt  implementation.cpp.txt  main.cpp  method.cpp  method.h  prm.cpp  prm.h  readMap.cpp  readMap.h
turtlebot_sims/: map.pgm  turtlebot3_teleop_key_tb3_0.launch  turtlebot3_teleop_key_tb3_1.launch
turtlebot_sims/map_server2/: CMakeLists.txt
turtlebot_sims/map_server2/launch/: map_server.launch
turtlebot_sims/map_server2/maps/: map.pgm  map.yaml  map_sim.pgm  map_sim.yaml
turtlebot_sims/map_server2/src/: main.cpp
turtlebot_sims/multi_turtlebot3_fake/include/turtlebot3_fake/: turtlebot3_fake.h
turtlebot_sims/multi_turtlebot3_fake/launch/: 3_turtlebot_Hail_mary_test.launch  multi_turtlebot3_fake.launch  turtlebot3_fake.launch
turtlebot_sims/multi_turtlebot3_fake/rviz/: custom_multi_turtlebot_config.rviz  hail_mary_multi_turtlebot_config.rviz  turtlebot3_fake.rviz
turtlebot_sims/multi_turtlebot3_fake/src/: turtlebot3_fake.cpp
turtlebot_sims/turtlemulti/: CMakeLists.txt
turtlebot_sims/turtlemulti/launch/: turtlehouseEmptyRoom.launch
turtlemulti/: package.xml
turtlemulti/launch/: turtleMulti.launch  turtlesInHouse.launch
